--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
 
-    <div id="configuration-ecran">
+    <div id="auth-ecran" class="input-group">
+        <h3>Mon Compte</h3>
+        <input type="email" id="auth-email" placeholder="Email">
+        <input type="password" id="auth-password" placeholder="Mot de passe">
+        <button id="auth-signup">Créer un compte</button>
+        <button id="auth-login">Se Connecter</button>
+        <p id="auth-erreur" class="erreur-msg cache"></p>
+    </div>
+
+    <div id="user-ecran" class="cache input-group">
+        <p>Connecté en tant que <strong id="user-email"></strong></p>
+        <button id="auth-logout">Se Déconnecter</button>
+        <hr style="width:100%; margin: 15px 0;">
+        <h3>Mes Parties Sauvegardées</h3>
+        <div id="liste-parties-sauvegardees">Chargement...</div>
+        <button id="lancer-nouvelle-partie-btn" style="margin-top: 15px;">+ Commencer une nouvelle partie</button>
+    </div>
+
+    <div id="configuration-ecran" class="cache">
         <h2>🎲 Nouvelle Partie</h2>
         <div class="input-group">
             <input type="text" id="nom-joueur" placeholder="Nom du joueur">
@@ -17,17 +35,22 @@
             <input type="color" id="couleur-joueur" value="#FF6384">
             <button id="ajouter-joueur">Ajouter</button>
         </div>
-        <div id="liste-joueurs-conf"></div>
-        <div class="option-secret">
-            <input type="checkbox" id="mode-secret-config">
-            <label for="mode-secret-config">Garder les scores secrets jusqu'à la fin</label>
+
+        <div id="liste-joueurs-conf" class="input-group">
+             </div>
+
+        <div class="input-group">
+            <div class="option-secret">
+                <input type="checkbox" id="mode-secret-config">
+                <label for="mode-secret-config">Garder les scores secrets jusqu'à la fin</label>
+            </div>
+            <div class="option-victoire input-group">
+                <strong>Objectif du jeu :</strong>
+                <label><input type="radio" name="condition-victoire" value="low" checked> Avoir le MOINS de points</label>
+                <label><input type="radio" name="condition-victoire" value="high"> Avoir le PLUS de points</label>
+            </div>
+            <button id="demarrer-partie" disabled>Démarrer la partie</button>
         </div>
-        <div class="option-victoire input-group">
-            <strong>Objectif du jeu :</strong>
-            <label><input type="radio" name="condition-victoire" value="low" checked> Avoir le MOINS de points (ex: Skyjo)</label>
-            <label><input type="radio" name="condition-victoire" value="high"> Avoir le PLUS de points</label>
-        </div>
-        <button id="demarrer-partie" disabled>Démarrer la partie</button>
     </div>
 
     <div id="score-ecran" class="cache">
@@ -70,6 +93,10 @@
                         Arrêter dans <input type="number" id="nb-manches-restantes" min="1" value="3" disabled> manches restantes.
                     </label>
                 </div>
+                
+                <button id="sauvegarder-partie" style="background-color: #28a745; width: 100%;">Sauvegarder la partie</button>
+                <p id="save-feedback" class="cache" style="color: green; text-align: center;"></p>
+
                 <button id="arreter-maintenant" class="bouton-fin">Terminer la partie Maintenant</button>
             </div>
         </div>
@@ -84,7 +111,6 @@
             </div>
             <p id="reveal-score">0 points</p>
         </div>
-
         <button id="skip-all-btn" class="bouton-fin">Passer l'animation</button>
     </div>
 
@@ -114,6 +140,25 @@
         <div id="graphique-final-container" class="input-group"></div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script> <script>
+      // Ta configuration Firebase
+      const firebaseConfig = {
+        apiKey: "AIzaSyD1cC-bahvm3fqZcsYYiBvolyaqVyMGXnI",
+        authDomain: "compteur-point-julien.firebaseapp.com",
+        projectId: "compteur-point-julien",
+        storageBucket: "compteur-point-julien.appspot.com",
+        messagingSenderId: "961827366523",
+        appId: "1:961827366523:web:51db1d7ac1f975f569e4de"
+      };
+
+      // Initialise Firebase
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore(); // Référence à Firestore
+    </script>
+    
     <script src="script.js"></script>
+
 </body>
 </html>
