--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <nav id="side-nav">
             <div id="nav-logo">
-                <img src="FoxScore.png.png" alt="Logo FoxScore" style="width: 100%; height: auto;">
+                <img src="FoxScore.png" alt="Logo FoxScore" style="width: 100%; height: auto;">
             </div>
             
             <div id="nav-links">
