--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
       };
       firebase.initializeApp(firebaseConfig);
       const db = firebase.firestore();
-    </T>
-    <script src="script.js"></script>
+    </script> <script src="script.js"></script>
 
 </body>
 </html>
