--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         </header>
 
         <nav id="side-nav">
-            <div id="nav-logo">🦊</div>
-            
+            <div id="nav-logo">
+                <img src="FoxScore.png" alt="Logo FoxScore" style="width: 100%; height: auto;">
+            </div>
             <div id="nav-links">
                 <a href="#" class="nav-link" data-page="page-history-grid">Historique</a>
                 <a href="#" class="nav-link" data-page="page-new-game">Nouvelle Partie</a>
